# RubikSolver

./: CMakeLists.txt
src/: ActionChain.cpp  ActionChain.h  Constants.h  Cube.cpp  Cube.h  Face.cpp  Face.h  Main.cpp  rlutil.h
